[gd_scene load_steps=8 format=3 uid="uid://cxo4c1l4ohwbd"]

[ext_resource type="Script" path="res://Autoloads/GlobslSettings.gd" id="1_cc8oi"]
[ext_resource type="AudioStream" uid="uid://d2rjx4kas5i3f" path="res://Audio/click-button.mp3" id="2_o1xk2"]
[ext_resource type="AudioStream" uid="uid://clgnryx6v4ui8" path="res://Audio/hover-button.mp3" id="3_xywcd"]
[ext_resource type="AudioStream" uid="uid://cab78ss4hkhd5" path="res://Audio/explosion-nearby.mp3" id="4_jecph"]
[ext_resource type="AudioStream" uid="uid://q0uvxx2wapdg" path="res://Audio/knight-right-footstep-on-gravel-4-with-chainmail.mp3" id="5_fy4b4"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_a6pnm"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("5_fy4b4")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ph02c"]
playback_mode = 1
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("5_fy4b4")
stream_0/weight = 1.0

[node name="Global" type="Node"]
script = ExtResource("1_cc8oi")

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_o1xk2")
volume_db = -25.0
pitch_scale = 1.25

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xywcd")
volume_db = -25.0

[node name="MineExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jecph")
volume_db = -2.0

[node name="FlagSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_a6pnm")
volume_db = -10.0
pitch_scale = 0.8

[node name="TileReveal" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ph02c")
volume_db = -10.0
pitch_scale = 1.2
max_polyphony = 3

[connection signal="settings_changed" from="." to="." method="_on_settings_changed"]
